Modified Works Page

--- a/works.html
+++ b/works.html
@@ -81,7 +81,7 @@
           <!-- 1 -->
           <div class="box">
             <div class="image">
-              <img src="../images/work01-hover.jpg" alt="" />
+              <img src="images/work01-hover.jpg" alt="" />
             </div>
             <div class="text">
               <h4>0001/006</h4>
@@ -96,7 +96,7 @@
           <!-- 2 -->
           <div class="box">
             <div class="image">
-              <img src="../images/work02-hover.jpg" alt="" />
+              <img src="images/work02-hover.jpg" alt="" />
             </div>
             <div class="text">
               <h4>0002/006</h4>
@@ -111,7 +111,7 @@
           <!-- 3 -->
           <div class="box">
             <div class="image">
-              <img src="../images/work03-hover.jpg" alt="" />
+              <img src="images/work03-hover.jpg" alt="" />
             </div>
             <div class="text">
               <h4>0003/006</h4>
